<!--
  ~ Copyright (c) Code Written and Tested by Ahmed Emad in 21/04/20 21:25
  -->

<resources>

    <!-- Manifest strings-->
    <string name="app_name">My Recipe App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!-- Login activity strings-->
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login2">Login</string>

    <!-- Home fragment strings-->
    <string name="home">Home</string>
    <string name="user_photo">user photo</string>
    <string name="minutes"> min </string>

    <!-- Favourites fragment strings-->
    <string name="your_favourites">Your Favourites</string>
    <string name="favourites_empty">This list is empty</string>

    <!-- Search fragment strings-->
    <string name="search_recipes">Search Recipes</string>
    <string name="search">search</string>
    <string name="categories">Categories</string>
    <string name="popular_recipes">Popular Recipes</string>

    <!-- profile fragment strings-->
    <string name="user_profile_photo">user profile photo</string>
    <string name="followers">Followers</string>
    <string name="followings">Followings</string>
    <string name="my_recipes_icon">my recipes icon</string>
    <string name="my_recipes">My Recipes</string>
    <string name="add_icon">add icon</string>
    <string name="add_a_recipe">Add a Recipe</string>
    <string name="edit_icon">edit icon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings_icon">settings icon</string>
    <string name="login_or_sign_up">Login</string>

    <!-- Error strings-->
    <string name="network_error">An Error occurred during connecting to the internet</string>
    <string name="profile_network_error">Error Loading profile</string>
    <string name="wrong_email_or_password">Wrong E-mail or Password</string>
    <string name="feed_empty">Your Recipes Feed is Empty</string>
    <string name="loading">Loading…</string>
    <string name="list_empty">This list is empty</string>
    <string name="wrong_name">Invalid Name</string>
    <string name="wrong_email">Invalid Email</string>
    <string name="wrong_password">Invalid Password</string>
    <string name="duplicate_email">This email is already used</string>


    <!-- Recipe detail fragment strings-->
    <string name="about_recipe">About Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="images">Images</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="tags">Tags</string>
    <string name="reviews">Reviews</string>
    <string name="see_all_reviews">See all reviews</string>
    <string name="add_a_review">Add a Review</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>

    <!-- Settings fragment strings-->
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>

    <!-- languages strings -->
    <string name="arabic" translatable="false">العربية</string>
    <string name="english" translatable="false">English</string>

    <!-- Signup Activity strings -->
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>

    <!-- Reviews Strings -->
    <string name="write_review">Write a Review for that recipe</string>
    <string name="edit_review">Edit</string>
    <string name="delete_review">Delete</string>
</resources>
