<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) Code Written and Tested by Ahmed Emad in 18/04/20 15:41
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/profileFragmentSwipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            tools:context=".ui.Fragments.ProfileFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/voidView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/profilePhotoContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:shape="ring"
                    app:cardCornerRadius="100dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="@+id/voidView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/voidView"
                    app:layout_constraintVertical_bias="0.25">

                    <ImageView
                        android:id="@+id/profilePhoto"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:contentDescription="@string/user_profile_photo"
                        android:scaleType="centerCrop"
                        android:src="@drawable/user" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/loginLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-black"
                    android:maxLines="1"
                    android:text="@string/login2"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profilePhotoContainer" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-black"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profilePhotoContainer" />

                <LinearLayout
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/voidView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginLabel">

                    <TextView
                        android:id="@+id/followersNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/followersLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/followers"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/followings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="@+id/voidView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginLabel">

                    <TextView
                        android:id="@+id/followingsNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/followingsLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:text="@string/followings"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/voidView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/myRecipesButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp">

                        <ImageView
                            android:id="@+id/myRecipesIcon"
                            android:layout_width="30dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:contentDescription="@string/my_recipes_icon"
                            android:src="@drawable/recipe"
                            android:tint="#2EA7D5"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/myRecipeLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/my_recipes"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="@+id/myRecipesIcon"
                            app:layout_constraintStart_toEndOf="@+id/myRecipesIcon"
                            app:layout_constraintTop_toTopOf="@+id/myRecipesIcon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/addRecipeButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp">

                        <ImageView
                            android:id="@+id/addRecipeIcon"
                            android:layout_width="30dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:contentDescription="@string/add_icon"
                            android:src="@drawable/add"
                            android:tint="@color/colorPrimary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/addRecipeLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/add_a_recipe"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="@+id/addRecipeIcon"
                            app:layout_constraintStart_toEndOf="@+id/addRecipeIcon"
                            app:layout_constraintTop_toTopOf="@+id/addRecipeIcon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/editProfileButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp">

                        <ImageView
                            android:id="@+id/editProfileIcon"
                            android:layout_width="30dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:contentDescription="@string/edit_icon"
                            android:src="@drawable/edit"
                            android:tint="@color/colorPrimary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/editProfileLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_toEndOf="@id/editProfileIcon"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/edit_profile"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="@+id/editProfileIcon"
                            app:layout_constraintStart_toEndOf="@+id/editProfileIcon"
                            app:layout_constraintTop_toTopOf="@+id/editProfileIcon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/settingsButton"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp">

                        <ImageView
                            android:id="@+id/settingsIcon"
                            android:layout_width="30dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="12dp"
                            android:contentDescription="@string/settings_icon"
                            android:src="@drawable/settings"
                            android:tint="@color/colorPrimary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/settingsLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="sans-serif-black"
                            android:text="@string/action_settings"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            app:layout_constraintBottom_toBottomOf="@+id/settingsIcon"
                            app:layout_constraintStart_toEndOf="@+id/settingsIcon"
                            app:layout_constraintTop_toTopOf="@+id/settingsIcon" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>